// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArrowIcon /> by default (deprecated) matches the snapshot 1`] = `
<svg
  className="k-ArrowIcon k-ArrowIcon--right"
  height="5.64"
  viewBox="0 0 6 6"
  width="8.48"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Arrow
  </title>
  <path
    d="M6 0H0v6h2V2h4z"
  />
</svg>
`;

exports[`<ArrowIcon /> with the version prop by default matches the snapshot 1`] = `
<svg
  className=""
  fill="#222"
  height="5.64"
  transform="rotate(90)"
  viewBox="0 0 8.48 5.64"
  width="8.48"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
  />
</svg>
`;

exports[`<ArrowIcon /> with the version prop when disabled matches the snapshot 1`] = `
<svg
  className=""
  fill="#fff"
  height="5.64"
  transform="rotate(90)"
  viewBox="0 0 8.48 5.64"
  width="8.48"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
  />
</svg>
`;

exports[`<ArrowIcon /> with the version prop with the prop \`direction\` set to \`bottom\` matches the snapshot 1`] = `
<svg
  className=""
  fill="#222"
  height="5.64"
  transform="rotate(180)"
  viewBox="0 0 8.48 5.64"
  width="8.48"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
  />
</svg>
`;

exports[`<ArrowIcon /> with the version prop with the prop \`direction\` set to \`left\` matches the snapshot 1`] = `
<svg
  className=""
  fill="#222"
  height="5.64"
  transform="rotate(-90)"
  viewBox="0 0 8.48 5.64"
  width="8.48"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
  />
</svg>
`;

exports[`<ArrowIcon /> with the version prop with the prop \`direction\` set to \`right\` matches the snapshot 1`] = `
<svg
  className=""
  fill="#222"
  height="5.64"
  transform="rotate(90)"
  viewBox="0 0 8.48 5.64"
  width="8.48"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
  />
</svg>
`;
